--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -6,6 +6,7 @@ on:
       - 'release-*'
       - '!release-1.4'
       - '!release-1.5'
+      - 'aNewBranch'
   pull_request:
     branches:
       - 'master'
